fix wrap text on button

--- a/static_files/assets/css/paper-kit.css
+++ b/static_files/assets/css/paper-kit.css
@@ -5936,18 +5936,6 @@ textarea.form-control {
 
 /*tambahan sendiri*/
 
-.page-quiz {
-    background-color: #B2AFAB;
-    background-position: center center;
-    background-size: cover;
-    min-height: 100vh;
-    max-height: 999px;
-    overflow: hidden;
-    position: relative;
-    align-items: center;
-    justify-content: center;
-}
-
 .float{
 	position:fixed;
 	width:60px;
@@ -5960,4 +5948,9 @@ textarea.form-control {
 	text-align:center;
 	box-shadow: 2px 2px 3px #999;
     z-index: 1000;
+}
+
+.btn-wrap-text {
+  white-space: normal !important;
+  word-wrap: break-word !important;
 }
